--- a/vercel.json
+++ b/vercel.json
@@ -13,5 +13,6 @@
             "src": "/(.*)",
             "dest": "blog/wsgi.py"
         }
-    ]
+    ],
+    "outputDirectory": "staticfiles_build"
 }
