--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,13 @@
         "src": "blog/wsgi.py",
         "use": "@vercel/python",
         "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+    },
+    {
+      "src": "build_files.sh",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "staticfiles_build"
+      }
     }],
     "routes": [
         {
@@ -13,6 +20,5 @@
             "src": "/(.*)",
             "dest": "blog/wsgi.py"
         }
-    ],
-    "outputDirectory": "staticfiles_build"
+    ]
 }
